--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.ide.rider": "3.0.26",
+    "com.unity.collab-proxy": "2.5.1",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.7.0",
+    "com.unity.inputsystem": "1.11.2",
+    "com.unity.multiplayer.center": "1.0.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.test-framework": "1.3.9",
+    "com.unity.test-framework": "1.4.5",
     "com.unity.ugui": "2.0.0",
-    "com.unity.xr.management": "4.4.0",
-    "com.unity.xr.oculus": "4.1.2",
-    "com.unity.xr.openxr": "1.9.1",
+    "com.unity.xr.management": "4.5.0",
+    "com.unity.xr.oculus": "4.3.0",
+    "com.unity.xr.openxr": "1.12.1",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
