--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,7 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.4.4" />
-  <package id="Stub.System.Data.SQLite.Core.NetStandard" version="1.0.114.3" />
-  <package id="System.Data.SQLite" version="1.0.118" manuallyInstalled="true" />
-  <package id="System.Data.SQLite.Core" version="1.0.118" />
+  <package id="EntityFramework" version="6.4.4" manuallyInstalled="true" />
 </packages>
